WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220545
ASSERTION FAILED: m_connection under WebKit::WebPageProxy::acceptsFirstMouse()
https://bugs.webkit.org/show_bug.cgi?id=220545
Summary
ASSERTION FAILED: m_connection under WebKit::WebPageProxy::acceptsFirstMouse()
Ryan Haddad
Reported
2021-01-12 09:24:42 PST
TestWebKitAPI.WebKit2.AcceptsFirstMouseDuringWebProcessLaunch ASSERTION FAILED: m_connection /Volumes/Data/slave/bigsur-debug/build/Source/WebKit/UIProcess/AuxiliaryProcessProxy.h(76) : IPC::Connection *WebKit::AuxiliaryProcessProxy::connection() const 1 0x10bb80c89 WTFCrash 2 0x11368c4ab WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1146df459 WebKit::AuxiliaryProcessProxy::connection() const 4 0x114a65ed6 WebKit::WebPageProxy::messageSenderConnection() const 5 0x114cfced0 std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> > IPC::MessageSender::sendSync<Messages::WebPage::AcceptsFirstMouse>(Messages::WebPage::AcceptsFirstMouse&&, Messages::WebPage::AcceptsFirstMouse::Reply&&, unsigned long long, WTF::Seconds, WTF::OptionSet<IPC::SendSyncOption>) 6 0x114cedca2 std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> > IPC::MessageSender::sendSync<Messages::WebPage::AcceptsFirstMouse>(Messages::WebPage::AcceptsFirstMouse&&, Messages::WebPage::AcceptsFirstMouse::Reply&&, WTF::Seconds, WTF::OptionSet<IPC::SendSyncOption>) 7 0x114cedbe1 WebKit::WebPageProxy::acceptsFirstMouse(int, WebKit::WebMouseEvent const&) 8 0x1148bab31 WebKit::WebViewImpl::acceptsFirstMouse(NSEvent*) 9 0x1147a1919 -[WKWebView(WKImplementationMac) acceptsFirstMouse:] 10 0x103ff6471 TestWebKitAPI::WebKit2_AcceptsFirstMouseDuringWebProcessLaunch_Test::TestBody() 11 0x104b4cf34 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 12 0x104b1b19b void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 13 0x104b1b0d6 testing::Test::Run() 14 0x104b1c22a testing::TestInfo::Run() 15 0x104b1d074 testing::TestCase::Run() 16 0x104b28738 testing::internal::UnitTestImpl::RunAllTests() 17 0x104b522c4 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 18 0x104b2822b bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 19 0x104b280fd testing::UnitTest::Run() 20 0x1048c7a61 RUN_ALL_TESTS() 21 0x1048c79f2 TestWebKitAPI::TestsController::run(int, char**) 22 0x104ae5d75 main 23 0x7fff20393621 start
https://build.webkit.org/builders/Apple-BigSur-Debug-WK2-Tests/builds/685/steps/run-api-tests/logs/stdio
Attachments
Patch
(2.44 KB, patch)
2021-01-12 09:58 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-01-12 09:25:29 PST
<
rdar://problem/73043854
>
Ryan Haddad
Comment 2
2021-01-12 09:25:34 PST
This crash started after
https://trac.webkit.org/changeset/271380/webkit
landed to fix a different assertion.
Radar WebKit Bug Importer
Comment 3
2021-01-12 09:36:50 PST
Comment hidden (obsolete)
<
rdar://problem/73044370
>
Wenson Hsieh
Comment 4
2021-01-12 09:58:53 PST
Created
attachment 417467
[details]
Patch
Wenson Hsieh
Comment 5
2021-01-12 09:59:31 PST
(In reply to Wenson Hsieh from
comment #4
)
> Created
attachment 417467
[details]
> Patch
This time, I actually ran the test under Debug and saw no further assertions.
EWS
Comment 6
2021-01-12 11:05:07 PST
Committed
r271408
: <
https://trac.webkit.org/changeset/271408
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417467
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug